--- a/UINavigator/UINavigator.csproj
+++ b/UINavigator/UINavigator.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>UINavigator</Title>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
